# Horizon-Operating-System

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bochsrc-linux.bxrc  bochsrc-windows.bxrc  bochsrc.bxrc  compile_commands.json  config.toml  grub.cfg  horizon.img  install_grub.py  qemu-linux.cfg  qemu-macos.cfg  qemu-windows.cfg  todo.md
src/: CMakeLists.txt  Cargo.template.toml  Makefile  config.toml  lib.rs  root.rs  root.template.rs  todo.md
src/arch/: mod.rs
src/arch/x86/: Makefile  config.toml  i686-none.json  kernel.lds
src/driver/: Makefile  bus_dm.c  config.toml  interrupt_dm.c  storage_dm.c  storage_io.c  storage_io_queue.c  time_dm.c  timer.c  timer_dm.c  transfer.c  video.c  video_dm.c
src/driver/framebuffer/: Makefile  config.toml  console_backend.c  framebuffer.c  framebuffer_dm.c
src/driver/input/: Makefile  config.toml  input_dm.c
src/driver/interrupt/: Makefile  config.toml  interrupt_dm.c
src/driver/network/: Makefile  buffer.c  config.toml  conn.c  mii.c  neighbour.c  network.c  network_dm.c
src/driver/serial/: Makefile  config.toml  serial_dm.c
src/driver/sound/: Makefile  config.toml  pcm.c  sound_dm.c
src/drivers/: Makefile  config.toml
src/fs/: Makefile  config.toml  fat32.c  fs.c  vfs.c
src/gui/: Makefile  cursor.c  graphic.c  gui.c  idmm.c  input.c  layer.c  window.c
src/include/: bits.h  config.h  const.h  ctype.h  dyn_array.h  hash.h  math.h  multiple_return.h  random.h  result.h  sections.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  types.h  vsprintf.h
src/kernel/: Makefile  a.out  app.c  block_cache.c  bus_driver.c  condvar.c  config.toml  console.c  device.c  device_driver.c  device_manager.c  dma.c  driver.c  driver_dependency.c  driver_interface.c  elf.c  fifo.c  font-default.c  initcall.c  main.c  memory.c  memtest.c  periodic_task.c  process.c  rwlock.c  softirq.c  sync.c  syscall.c  thread.c  wait_queue.c
src/lib/: Makefile  config.toml  dyn_array.c  math.c  rand.c  random.c  string.c  vsprintf.c
src/network/: Makefile  arp.c  dhcp.c  eth.c  ipv4.c  network.c  tcp.c  udp.c
src/objects/: Makefile  config.toml  handle.c  mount.c  objects.c  ops.c  permission.c  types.c
(+543 files in other folders)
